# qa_guru_4_HW_17

./: .gitignore  =2.0.0b4  =2.0.0rc2  pyproject.toml
