[tool.poetry]
name = "qa-guru-4-hw-14"
version = "0.1.0"
description = ""
authors = ["peresypkinmi <peresypkin.ma@sibvaleo.com>"]
readme = "README.md"
packages = [{include = "qa_guru_4_hw_14"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc2"
selenium = "4.4.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
